[project]
name = "common-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.12",
    "dpath>=2.2.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.29.2",
    "prefect>=3.1.11",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
]
